# 2023_Main_Robot

./: .gitignore  .pre-commit-config.yaml  Bad.py  Bad2.py  README.md  build.gradle  roborio-nt-backup.json  settings.gradle
.Glass/: glass-window.json  glass.json
.github/: CODEOWNERS  Project.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Project.yml  format.yml  main.yml  on_pr.yml  superlinter.yml
.wpilib/: wpilib_preferences.json
ButtonPanel/: ButtonPanel.ino
ButtonPanel/Hardware/: .gitignore  ButtonPanel.kicad_pcb  ButtonPanel.kicad_prl  ButtonPanel.kicad_pro  ButtonPanel.kicad_sch  arcade_buttons.kicad_sym  sym-lib-table
Deploy/RaspberryPi/: delete.sh  init.sh
Lint_Test/src/: App.java
MathLib/: README.md  build.gradle
Messenger/: config.properties  spec.md
Messenger/MessengerClient/: build.gradle
Messenger/MessengerServer/: build.gradle
Messenger/MessengerTest/: build.gradle
Messenger/messenger-server/: Cargo.toml
Messenger/messenger-server/src/: main.rs
Pathfinder/: Cargo.toml
Pathfinder/src/: arm.rs  collision.rs  dijkstra.rs  graph.rs  graphical_test.rs  graphics.rs  grid.rs  main.rs  messenger.rs  theta_star.rs  vectors.rs
Pathfinding/: build.gradle  config.json  grids.json
Profiler/: README.md
Robot/: .gitignore  build.gradle  networktables.json.bck
Robot/.pathplanner/: settings.json
RobotLib/: build.gradle
Shared-Arm/: build.gradle
ShuffleLog/: build.gradle
TaskManager/: README.md  build.gradle  config.json  tasks.json
TestBench/: build.gradle
(+607 files in other folders)
