[package]
name = "Pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
ordered-float = "3.7"
priority-queue = "1.3"
lerp = "0.4"
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
bytes = "1.4.0"
rsevents = "0.3.1"
tokio-util = {version = "0.7.8", features = ["codec"] }
tokio-stream = {version = "0.1.14", features = [] }
macroquad = "0.3.25"
