[package]
name = "messenger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures-util = "0.3.28"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "io-util", "net", "macros", "time"] }
tokio-util = {version = "0.7.8", features = ["codec"] }
